[package]
name = "transbot"
version = "0.1.2"
edition = "2024"
description = "A simple translation robot that translates HTMLs/EPUBs based on LLMs."
readme = "README.md"
documentation = "https://docs.rs/transbot"
repository = "https://github.com/Zhiming-WU/transbot.git"
keywords = ["translation"]
license = "MIT"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = { version = "1.0.102" }
clap = { version = "4.6.1", features = ["derive", "std"], optional = true }
lol_html = { version = "2.8.1" }
mime_guess = { version = "2.0.5", optional = true }
quick-xml = { version = "0.39.2" }
rbook = { version = "0.7.6" }
regex = { version = "1.12.3" }
reqwest = { version = "0.13.2", features = ["blocking", "json", "socks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
url = { version = "2.5.8" }

[features]
cli = ["dep:clap", "dep:mime_guess"]

[[bin]]
name = "transbot_cli"
path = "src/bin/transbot_cli.rs"
required-features = ["cli"]
